# printer_agent

./: README.md  install.sh  printer_app.service  pyproject.toml  requirements.txt  update.sh
printer_app/: app.py  print_agent.py
printer_app/templates/: base_layout.html  change_password.html  form.html  header.html  index.html  login.html  logs.html  settings.html  updates.html  users.html
